fix: card gap fix

--- a/gorda/src/components/VoteListItem.scss
+++ b/gorda/src/components/VoteListItem.scss
@@ -1,5 +1,5 @@
 .vote_item_card {
-    width: 401px;
+    width: 400px;
     height: 429px;
     background-color: white;
     border-radius: 15px;
