--- a/gorda/src/pages/InstitutionDetail.scss
+++ b/gorda/src/pages/InstitutionDetail.scss
@@ -93,6 +93,6 @@ a{
 
         display: flex;
         flex-wrap: wrap;
-        gap: 33px;
+        gap: 30px;
     }
 }
